# forge

./: .gitignore  AGENTS.md  Forge_Product_Description.docx  README.md  pyproject.toml
docs/: forge_llm_platform_todo.md  future_tokenizer_and_chat.md  studio_ui_theme.md  verification_matrix.md
src/: forge.py
src/cli/: __init__.py  __main__.py  chat_command.py  hardware_profile_command.py  main.py  run_spec_command.py  train_command.py  verify_command.py
src/core/: __init__.py  chat_types.py  config.py  constants.py  errors.py  logging_config.py  run_spec.py  run_spec_execution.py  run_spec_fields.py  run_spec_option_builders.py  s3_uri.py  types.py  verification.py  verification_checks.py  verification_types.py
src/ingest/: __init__.py  checkpoint_store.py  incremental_ingest.py  input_reader.py  pipeline.py
src/serve/: __init__.py  architecture_loader.py  chat_option_resolver.py  chat_runner.py  custom_loop_loader.py  default_model.py  device_selection.py  hardware_profile.py  huggingface_tokenizer.py  model_format.py  model_weights.py  onnx_chat_runner.py  tokenization.py  training_artifact_contract.py  training_artifacts.py  training_checkpoint.py  training_config_hash.py  training_context.py  training_dataloader.py  training_epoch_pass.py  training_execution.py  training_hooks.py  training_metadata.py  training_optimization.py  training_precision.py  training_progress.py  training_reproducibility_bundle.py  training_run_io.py  training_run_registry.py  training_run_types.py  training_runner.py  training_setup.py
src/store/: __init__.py  catalog_io.py  dataset_sdk.py  lance_dataset.py  metadata_filtering.py  record_payload.py  s3_export.py  snapshot_store.py  training_export.py
src/studio/: __init__.py
src/transforms/: __init__.py  exact_deduplication.py  language_detection.py  perplexity_quality.py  quality_scoring.py
studio-app/: README.md  package-lock.json  package.json
studio-app/src/: App.css  App.tsx  pipeline.ts  pipeline_graph.ts  pipeline_layout.ts  pipeline_run.ts  runtime_insights.ts  session_state.ts  types.ts  view_controls.ts
studio-app/src-tauri/: Cargo.toml  tauri.conf.json
studio-app/src-tauri/src/: lib.rs  main.rs  models.rs
tests/: conftest.py  fixture_paths.py
tests/integration/: test_incremental_resume_export.py  test_phase_one_ingest.py
(+89 files in other folders)
